--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "module": "./lib/index.js",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.js"
+    }
+  },
   "scripts": {
     "lib": "vite build  --out-dir lib --ssr src/index.js",
     "push": "node script && yarn lib && git add . && git commit -m 'commit' && git push",
