--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./lib/index.js",
-  "module": "./lib/index.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./lib/index.js",
-      "require": "./lib/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
     }
   },
   "scripts": {
-    "lib": "vite build  --out-dir lib --ssr src/index.js",
-    "push": "node script && yarn lib && git add . && git commit -m 'commit' && git push",
+    "build": "vite build",
+    "push": "node script && yarn build && git add . && git commit -m 'commit' && git push",
     "format": "prettier --write src/"
   },
   "dependencies": {
