--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     }
   },
   "scripts": {
-    "build": "vite build --out-dir lib",
+    "build": "vite build",
     "push": "node script && yarn build && git add . && git commit -m 'commit' && git push",
     "format": "prettier --write src/"
   },
